exercise-4.9/overlays/production/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: the-project
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: frontend
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
